Fix task selection visibility in free jobs

--- a/app/assets/stylesheets/service/free_jobs.css.less
+++ b/app/assets/stylesheets/service/free_jobs.css.less
@@ -17,7 +17,7 @@
       display: none;
 
       &:checked+img {
-        box-shadow: 0 0 6px 0 #cccccc inset;
+        box-shadow: 0 0 1px 3px #52a8ec;
       }
     }
 
